# NHK2025

./: .gitignore  README.md
build.gitignore/rogidrive_msg/: CTestConfiguration.ini  CTestTestfile.cmake  cmake_install.cmake  rosidl_generator_py__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
build.gitignore/rogidrive_msg/ament_cmake_core/stamps/: rosidl_cmake_export_typesupport_targets-extras.cmake.stamp
build.gitignore/rogidrive_msg/ament_cmake_export_targets/: ament_cmake_export_targets-extras.cmake
build.gitignore/rogidrive_msg/rogidrive_msg__py/: cmake_install.cmake
install/: local_setup.sh  setup.sh
install.gitignore/rogidrive/share/rogidrive/: package.ps1  package.xml
install.gitignore/shoot/lib/shoot/: shooter
install.gitignore/shoot/share/shoot/: package.bash
install/rogidrive/lib/rogidrive/: rogidrive  rogidrive_tester
install/rogidrive/share/rogidrive/: package.bash  package.dsv  package.sh  package.zsh
install/rogidrive_msg/share/rogidrive_msg/: package.bash  (+6 more)
install/shoot/share/shoot/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
rogidrive/: README.md
rogidrive/rogidrive/: setup.cfg  setup.py
rogidrive/rogidrive/config/: r1.json  r2.json  test.json
rogidrive/rogidrive/rogidrive/: rogidrive.py
rogidrive/rogidrive_msg/: CMakeLists.txt  package.xml
rogidrive/rogidrive_msg/msg/: RogidriveMessage.msg
shoot/: CMakeLists.txt  package.xml
shoot/config/: config.yaml
shoot/src/: Dif_Everything.hpp  shoot.cpp
(+48 files in other folders)
