<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shoot</name>
  <version>0.0.0</version>
  <description>Shoot</description>
  <maintainer email="yuki@todo.todo">yuki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rogidrive_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

